<resources>
    <string name="app_name">EsriExample</string>
    <string name="basemap">Basemaps</string>
    <string name="layer">Layer</string>
    <string name="featurelayer1">on. Bars/Rest.</string>
    <string name="featurelayer2">off. Bars/Rest.</string>
    <string name="wmslayer1">Ortho.Pho.</string>
    <string name="dgk5">DGK5</string>

    <!-- basemap menu items -->
    <string name="StreetMapMenu">Streets</string>
    <string name="TopoMenu">Topographic</string>
    <string name="GrayMenu">Gray</string>
    <string name="OceanMenu">Oceans</string>

    <!--<string name="featureServiceURL">http://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/rest/services/World_Cities/FeatureServer/0</string>
    --><!--<string name="featureServiceURL">http://sampleserver5a.arcgisonline.com/ArcGIS/rest/services/LocalGovernment/Events/FeatureServer/0</string>

   <string name="featureServiceURL">http://services6.arcgis.com/TnkL2ImtItc6HyO9/arcgis/rest/services/Restaurant/FeatureServer/0</string>
    -->
   <string name="featureServiceURL">http://services6.arcgis.com/TnkL2ImtItc6HyO9/arcgis/rest/services/Restaurant/FeatureServer/0</string>
   <string name="featurelayer_url">http://services6.arcgis.com/TnkL2ImtItc6HyO9/arcgis/rest/services/Restaurant/FeatureServer/0</string>
   <string name="featureservice_url">http://services6.arcgis.com/TnkL2ImtItc6HyO9/arcgis/rest/services/Restaurant/FeatureServer</string>

   <string name="WMSURL">http://www.wms.nrw.de/geobasis/wms_nw_dop40</string>

    <string name="config.data.sdcard.offline.dir">ArcGIS/samples/CRGdb</string>
    <string name="config.geodatabase.name">bo</string>
    <string name="config.local.basemap">bochum.tpk</string>
    <string name="menu_download">Download</string>
</resources>
