<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Basemap"
        android:showAsAction="never"
        android:title="@string/basemap" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/World_Street_Map"
                    android:showAsAction="never"
                    android:title="@string/StreetMapMenu" />
                <item
                    android:id="@+id/World_Topo"
                    android:showAsAction="never"
                    android:title="@string/TopoMenu" />
                <item
                    android:id="@+id/Gray"
                    android:showAsAction="never"
                    android:title="@string/GrayMenu" />
                <item
                    android:id="@+id/Ocean_Basemap"
                    android:showAsAction="never"
                    android:title="@string/OceanMenu" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/Layer"
        android:showAsAction="never"
        android:title="@string/layer" >
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/featurelayer1"
                    android:showAsAction="never"
                    android:title="@string/featurelayer1" />
                <item
                    android:id="@+id/wmslayer1"
                    android:showAsAction="never"
                    android:title="@string/wmslayer1" />
            </group>
        </menu>
    </item>

</menu>